--- a/Miwok/app/src/main/res/layout/list_item.xml
+++ b/Miwok/app/src/main/res/layout/list_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--xml namespace = xmlns for android and tools-->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,17 +13,17 @@
         android:id="@+id/miwok_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        tools:text="lutti"
-        />
+        android:layout_marginStart="16dp"
+        tools:text="lutti" />
 
     <TextView
         android:id="@+id/default_text_view"
-        android:layout_marginStart="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="one"/>
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        tools:text="one" />
 
 
 </LinearLayout>
