--- a/Miwok/app/src/main/res/layout/list_item.xml
+++ b/Miwok/app/src/main/res/layout/list_item.xml
@@ -9,21 +9,42 @@
 
     <!--Tools: DesignTime Layout Attributes are attributes that will
         show on the layout preview, but not at runtime for the app-->
-    <TextView
-        android:id="@+id/miwok_text_view"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        tools:text="lutti" />
+        android:layout_marginBottom="16dp">
 
-    <TextView
-        android:id="@+id/default_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        tools:text="one" />
+    <ImageView
+        android:id="@+id/placeholder_image_view"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
+        android:src= "@mipmap/ic_launcher"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/miwok_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/default_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
